# system-monitor-rust

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cli.rs  lib.rs  main.rs  model.rs  monitor.rs  query.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/processes/: collector.rs  mod.rs
tests/: cli.rs  json_output.rs
web/: index.html  main.js  styles.css
