[package]
name = "system-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
