[package]
name = "system-monitor-tauri"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "system_monitor_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = "2.10.3"
system_monitor = { package = "system-monitor", path = ".." }

[build-dependencies]
tauri-build = "2.5.6"
